# ml-bootstrap

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  LINKS.md  README.md  TODO.md  prj.conf
cmake/: tflite-micro.cmake
src/: CMakeLists.txt  app.cpp  hello_int8_model.c  hello_model.c  main.cpp  main_lite.cpp  model.c  model.h
src/mcu/stm32f7x6ni/: linker.ld
